# weather_wardrobe

atr/: UFMG - Atalho.lnk  data_processor.cpp  sensor_monitor.cpp
atr/Banco_de_dados/: package-lock.json  package.json
atr/Banco_de_dados/src/: index.js
atr/Banco_de_dados/src/controllers/: Alerts.js  Machines.js  Notifications.js  Outfits.js  SensorReadings.js  Sensors.js
atr/Banco_de_dados/src/database/: mydatabase.db
atr/Banco_de_dados/src/database/migrations/: 20240730152838_machines.js  20240730153003_sensors.js  20240730153644_sensor_readings.js  (+2 more)
atr/Banco_de_dados/src/routes/: alerts.js  index.js  machines.js  notification.js  outfits.js  sensorReadings.js  sensors.js
atr/Banco_de_dados/src/validators/: Alerts.js  Outfits.js  SensorReadings.js
atr/banco-de-dados/: knexfile.js  package-lock.json  package.json
atr/banco-de-dados/src/: index.js
atr/banco-de-dados/src/controllers/: Alerts.js  Machines.js  Notifications.js  Outfits.js  SensorReadings.js  Sensors.js
atr/banco-de-dados/src/database/: inserir-alertas.sql  inserir-outfits.sql  mydatabase.db
atr/banco-de-dados/src/models/: Alerts.js  Machines.js  Notifications.js  Outfits.js  SensorReadings.js  Sensors.js
atr/banco-de-dados/src/routes/: alerts.js  index.js  machines.js  notifications.js  outfits.js  sensorReadings.js  sensors.js
atr/banco-de-dados/src/validators/: Machines.js  Notifications.js  Sensors.js
atr/minha-pagina/: CMakeLists.txt  package.json
atr/minha-pagina/src/: App.js  index.css  index.js
minha-pagina/: package-lock.json  package.json
minha-pagina/src/: App.css
(+7 files in other folders)
